RPI/arducam_mipicamera.h

#define FOURCC(a, b, c, d) ((a) | (b << 8) | (c << 16) | (d << 24))
#define IMAGE_ENCODING_I420 FOURCC('I', '4', '2', '0')
#define IMAGE_ENCODING_JPEG FOURCC('J', 'P', 'E', 'G')
#define IMAGE_ENCODING_RAW_BAYER FOURCC('R', 'A', 'W', ' ')
#define VIDEO_ENCODING_H264 FOURCC('H', '2', '6', '4')
#define VIDEO_LEVEL_H264_4 0x1C
#define VIDEO_LEVEL_H264_41 0x1D
#define VIDEO_LEVEL_H264_42 0x1E
#define VIDEO_PROFILE_H264_BASELINE 0x19
#define VIDEO_PROFILE_H264_MAIN 0x1A
#define VIDEO_PROFILE_H264_HIGH 0x1C
#define VIDEO_INTRA_REFRESH_CYCLIC 0x00
#define VIDEO_INTRA_REFRESH_ADAPTIVE 0x01
#define VIDEO_INTRA_REFRESH_BOTH 0x02
#define VIDEO_INTRA_REFRESH_CYCLIC_MROWS 0x7F000001
#define MMAL_BUFFER_HEADER_FLAG_EOS (1 << 0)
#define MMAL_BUFFER_HEADER_FLAG_FRAME_START (1 << 1)
#define MMAL_BUFFER_HEADER_FLAG_FRAME_END (1 << 2)
#define MMAL_BUFFER_HEADER_FLAG_FRAME (MMAL_BUFFER_HEADER_FLAG_FRAME_START | MMAL_BUFFER_HEADER_FLAG_FRAME_END)
#define MMAL_BUFFER_HEADER_FLAG_KEYFRAME (1 << 3)
#define MMAL_BUFFER_HEADER_FLAG_DISCONTINUITY (1 << 4)
#define MMAL_BUFFER_HEADER_FLAG_CONFIG (1 << 5)
#define MMAL_BUFFER_HEADER_FLAG_ENCRYPTED (1 << 6)
#define MMAL_BUFFER_HEADER_FLAG_CODECSIDEINFO (1 << 7)
#define MMAL_BUFFER_HEADER_FLAGS_SNAPSHOT (1 << 8)
#define MMAL_BUFFER_HEADER_FLAG_CORRUPTED (1 << 9)
#define MMAL_BUFFER_HEADER_FLAG_TRANSMISSION_FAILED (1 << 10)
#define MMAL_BUFFER_HEADER_FLAG_DECODEONLY (1 << 11)
#define MMAL_BUFFER_HEADER_FLAG_NAL_END (1 << 12)
typedef struct {
    uint32_t encoding;
    int quality; 
} IMAGE_FORMAT;
typedef struct {
    int32_t x;      
    int32_t y;      
    int32_t width;  
    int32_t height; 
} RECTANGLE;
typedef struct {
    int fullscreen;   
    int opacity;      
    RECTANGLE window; 
} PREVIEW_PARAMS;
typedef struct
{
    uint32_t encoding;         
    int bitrate;               
    int intraperiod;           
    int quantisationParameter; 
    int bInlineHeaders;        
    int immutableInput;        
    int profile;               
    int level;                 
    int inlineMotionVectors; 
    int intra_refresh_type;  
    int addSPSTiming;        
    int slices;              
} VIDEO_ENCODER_STATE;
typedef struct {
    void *priv; 
    uint8_t *data;
    uint32_t alloc_size; 
    uint32_t length;     
    uint32_t flags;      
    int64_t pts;    
    void *userdata; 
} BUFFER;
struct fract{
	uint32_t numerator;
	uint32_t denominator;
};
struct format {
    int mode;
    int width;
    int height;
    uint32_t pixelformat;
    struct fract frameintervals;
    const char *description;   
	uint32_t reserved[4];
};
struct camera_ctrl {
    int id;
    const char *desc;
    int max_value;
    int min_value;
    int default_value;
};
struct camera_interface {
    int i2c_bus;        
    int camera_num;     
    int sda_pins[2];    
    int scl_pins[2];    
    int shutdown_pins[2];
    int led_pins[2];
};
typedef int (*OUTPUT_CALLBACK)(BUFFER *buffer);
typedef void *CAMERA_INSTANCE;
int arducam_init_camera(CAMERA_INSTANCE *camera_instance);
int arducam_init_camera2(CAMERA_INSTANCE *camera_instance, struct camera_interface cam_interface);
int arducam_set_resolution(CAMERA_INSTANCE camera_instance, int *width, int *height);
int arducam_set_mode(CAMERA_INSTANCE camera_instance, int mode);
int arducam_get_format(CAMERA_INSTANCE camera_instance, struct format *fmt);
int arducam_set_video_callback(CAMERA_INSTANCE camera_instance, VIDEO_ENCODER_STATE *encoder_state, OUTPUT_CALLBACK callback, void *userdata);
int arducam_set_raw_callback(CAMERA_INSTANCE camera_instance, OUTPUT_CALLBACK callback, void *userdata);
BUFFER *arducam_capture(CAMERA_INSTANCE camera_instance, IMAGE_FORMAT *format, int timeout);
void arducam_release_buffer(BUFFER *buffer);
int arducam_start_preview(CAMERA_INSTANCE camera_instance, PREVIEW_PARAMS *preview_params);
int arducam_stop_preview(CAMERA_INSTANCE camera_instance);
int arducam_close_camera(CAMERA_INSTANCE camera_instance);
int arducam_reset_control(CAMERA_INSTANCE *camera_instance, int ctrl_id);
int arducam_set_control(CAMERA_INSTANCE camera_instance, int ctrl_id, int value);
int arducam_get_control(CAMERA_INSTANCE camera_instance, int ctrl_id, int *value);
int arducam_get_support_formats(CAMERA_INSTANCE camera_instance, struct format *fmt, int index);
int arducam_get_support_controls(CAMERA_INSTANCE camera_instance, struct camera_ctrl *cam_ctrl, int index);
int arducam_write_sensor_reg(CAMERA_INSTANCE camera_instance, uint16_t address, uint16_t value);
int arducam_read_sensor_reg(CAMERA_INSTANCE camera_instance, uint16_t address, uint16_t *value);
int arducam_software_auto_exposure(CAMERA_INSTANCE camera_instance, int enable);
int arducam_software_auto_white_balance(CAMERA_INSTANCE camera_instance, int enable);
BUFFER *arducam_unpack_raw10_to_raw8(uint8_t *buff_in, int width, int height);
BUFFER *arducam_unpack_raw10_to_raw16(uint8_t *buff_in, int width, int height);
int arducam_set_mode(CAMERA_INSTANCE camera_instance, int mode);